# cookiecutter-python-package

./: .editorconfig  .gitattributes  .pylintrc  CONTRIBUTING.md  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py
local_extensions/: __init__.py  git.py
scripts/: e2e.py
scripts/stubs/cookiecutter/: main.pyi
{{ cookiecutter.project_slug }}/: .gitattributes  .gitignore  .pylintrc  CONTRIBUTING.md  Pipfile  README.md  USAGE.md  mypy.ini  pyproject.toml  setup.py
{{ cookiecutter.project_slug }}/.github/workflows/: ci.yml  pr-post-merge.yml  prepare-release.yml
{{ cookiecutter.project_slug }}/.redport/: manifest.rpt.json
{{ cookiecutter.project_slug }}/.redport/patches/: disable-install-step.patch
{{ cookiecutter.project_slug }}/.shims/: .editorconfig  pylint  pylint.bat
{{ cookiecutter.project_slug }}/contrib/archlinux/{{ cookiecutter.package_name }}/: .nvchecker.toml  PKGBUILD
{{ cookiecutter.project_slug }}/contrib/archlinux/{{ cookiecutter.package_name }}-git/: .gitignore  PKGBUILD
{{ cookiecutter.project_slug }}/contrib/archlinux/{{ cookiecutter.package_name }}-local/: PKGBUILD
{{ cookiecutter.project_slug }}/contrib/archlinux/{{ cookiecutter.pypi_package_name }}/: PKGBUILD
{{ cookiecutter.project_slug }}/contrib/archlinux/{{ cookiecutter.pypi_package_name }}-git/: .gitignore  PKGBUILD
{{ cookiecutter.project_slug }}/contrib/archlinux/{{ cookiecutter.pypi_package_name }}-local/: .gitignore  PKGBUILD
{{ cookiecutter.project_slug }}/debian/: changelog  control  copyright  rules  {{ cookiecutter.package_name }}.manpages
{{ cookiecutter.project_slug }}/doc/sphinx/: conf.py
{{ cookiecutter.project_slug }}/licenses/: Proprietary-reference-debian.txt
{{ cookiecutter.project_slug }}/src/: fire_workarounds.py  settings.py  setup.py  {{ cookiecutter.first_module_name }}.py
{{ cookiecutter.project_slug }}/tests/: __init__.py  test_{{ cookiecutter.first_module_name }}.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: __init__.py  __main__.py  cli.py  errors.py  fire_workarounds.py  logging.py  settings.py  version.py  {{ cookiecutter.first_module_name }}.py
{{ cookiecutter.pypi_package_name }}/: .gitattributes  .gitignore  .pylintrc  .readthedocs.yaml  CONTRIBUTING.md  README.md  USAGE.md  pyproject.toml
{{ cookiecutter.pypi_package_name }}/.github/workflows/: build-dist.yml  ci.yml  pr-post-merge.yml  prepare-release.yml
{{ cookiecutter.pypi_package_name }}/.redport/: manifest.rpt.json
{{ cookiecutter.pypi_package_name }}/.redport/patches/: disable-install-step.patch
{{ cookiecutter.pypi_package_name }}/contrib/archlinux/{{ cookiecutter.pypi_package_name }}/: .nvchecker.toml  PKGBUILD
{{ cookiecutter.pypi_package_name }}/contrib/archlinux/{{ cookiecutter.pypi_package_name }}-git/: PKGBUILD
{{ cookiecutter.pypi_package_name }}/contrib/archlinux/{{ cookiecutter.pypi_package_name }}-local/: PKGBUILD
{{ cookiecutter.pypi_package_name }}/debian/: control  rules  {{ cookiecutter.pypi_package_name }}.manpages
{{ cookiecutter.pypi_package_name }}/doc/sphinx/: conf.py  index.md  index.rst  usage.md  usage.rst
{{ cookiecutter.pypi_package_name }}/licenses/: Apache-2.0-reference-debian.txt  Apache-2.0-reference.md
{{ cookiecutter.pypi_package_name }}/tests/: test_{{ cookiecutter.first_module_name }}.py
{{ cookiecutter.pypi_package_name }}/{{ cookiecutter.python_package_name }}/: __init__.py  __main__.py  config.py  errors.py  logging.py  settings.py  version.py  {{ cookiecutter.first_module_name }}.py
