[project]
name = "cookiecutter-python-package"
version = "1"
description = "Cookiecutter template for generating Python packages"
license = "Apache-2.0"
authors = [{ name = "Claudia Pellegrino", email = "clau@tiqua.de" }]

# We’re pinning Python to an exact minor version for compatibility.
# Keep this number in sync with the minimum Python version
# Cookiecutter supports, or slightly higher if some development
# dependency requires it.
requires-python = ">=3.8"

[dependency-groups]
dev = [
    "black",

    # We’re developing a Cookiecutter template, not a Python package.
    # But we’re maintaining a `pyproject.toml` nonetheless because we
    # want the benefit of improved IDE support while working on the
    # local Jinja extensions.
    #
    # We’re pinning both the major and minor version for compatibility.
    # Keep this in sync with the requirement mentioned in README.md.
    "cookiecutter ==2.6.0",

    "mypy",
    "poethepoet",
    "pylint",
]

# Keep these version numbers in sync with Cookiecutter’s `setup.py`.
provided = [
    "binaryornot >=0.4.4",
    "jinja2 >=2.7,<4.0.0",
    "click >=7.0,<9.0.0",
    "pyyaml >=5.3.1",
    "python-slugify >=4.0.0",
    "requests >=2.23.0",
    "arrow",
    "rich",
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
files = "local_extensions/**/*.py,scripts/**/*.py"
implicit_reexport = false
mypy_path = "scripts/stubs"
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.poe]
verbosity = -1

[tool.poe.tasks]
tasks.cmd = "poe -v"
tasks.help = "List available tasks"
e2e.script = "scripts.e2e:run"
e2e.help = "Run end-to-end test"
linter.cmd = "pylint --enable-all-extensions local_extensions scripts"
linter.help = "Check for style violations"
typecheck.cmd = "mypy"
typecheck.help = "Run static type checker"

[tool.ruff]
line-length = 72

[tool.ruff.format]
quote-style = "single"

[tool.uv]
default-groups = ["dev", "provided"]
fork-strategy = "fewest"
package = false
