[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
files = "{{ cookiecutter.project_slug }}/**/*.py,tests/**/*.py"
implicit_reexport = false
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.project_version }}"
description = "{{ cookiecutter.project_description }}"
readme = [
    "README.md",
    "USAGE.md",
]
authors = [
    "{{ cookiecutter.author_full_name }} <{{ cookiecutter.author_email }}>",
]
license = "{{ cookiecutter.project_license }}"
# See https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = ">={{ cookiecutter.python_version }}"
colorama = "*"
dataclass-wizard = ">=0.22"
fire = "*"

[tool.poetry.group.dev.dependencies]
autopep8 = "*"
mypy = ">=1.8"
myst-parser = ">=2.0.0"
pdoc = ">=14.0"
poethepoet = ">=0.24"
pylint = ">=3.0"
pytest = "*"
sphinx = ">=7.1.2,<7.2.0"
types-colorama = "*"

{% if cookiecutter.include_executable == "y" -%}
[tool.poetry.scripts]
{{ cookiecutter.executable_name }} = "{{ cookiecutter.project_slug }}.cli:run"
hello = "{{ cookiecutter.project_slug }}.cli:hello"

{% endif -%}
[tool.poe]
verbosity = -1

[tool.poe.tasks]
tasks.cmd = "poe -v"
tasks.help = "List available tasks"
cli.script = "{{ cookiecutter.project_slug }}.cli:run"
cli.help = "Run command line interface"
doc.cmd = "sphinx-build -aqEW -b man doc/sphinx build/man"
doc.help = "Generate documentation"
hello.script = "{{ cookiecutter.project_slug }}.cli:hello"
hello.help = "Run hello"
html.cmd = "pdoc {{ cookiecutter.project_slug }} !{{ cookiecutter.project_slug }}.settings"
html.help = "Browse HTML documentation"
linter.cmd = "pylint --enable-all-extensions {{ cookiecutter.project_slug }}"
linter.help = "Check for style violations"
man.cmd = "man build/man/{{ cookiecutter.executable_name }}.1"
man.help = "Open manual page"
tests.cmd = "pytest"
tests.help = "Run test suite"
typecheck.cmd = "mypy"
typecheck.help = "Run static type checker"

[tool.pyright]
reportUnsupportedDunderAll = "none"

[tool.pytest.ini_options]
testpaths = "tests"
xfail_strict = true
