[project]
name = "{{ cookiecutter.python_package_name }}"
version = "{{ cookiecutter.project_version }}"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
authors = [{ name = "{{ cookiecutter.author_full_name }}", email = "{{ cookiecutter.author_email }}" }]
license = "{{ cookiecutter.project_license }}"
# See https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers = ["Development Status :: 3 - Alpha", "Topic :: Utilities"]
requires-python = ">={{ cookiecutter.python_version }}"

dependencies = [
{%- if cookiecutter.include_executable == "y" %}
    "colorama",
    "fire",
{%- endif %}
    "pyxdg",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "autopep8",
    "mypy",
    "poethepoet",
    "pylint",
    "ruff",
{%- if cookiecutter.include_executable == "y" %}
    "types-colorama",
{%- endif %}
]
doc = ["myst-parser", "sphinx", "sphinx-autoapi", "sphinx-rtd-theme"]
test = ["pytest"]

{% if cookiecutter.include_executable == "y" -%}
[project.scripts]
{{ cookiecutter.executable_name }} = "{{ cookiecutter.python_package_name }}.cli:run"
hello = "{{ cookiecutter.python_package_name }}.cli:hello"

{% endif -%}
[project.urls]
documentation = "https://{{ cookiecutter.pypi_package_name }}.readthedocs.io/en/stable/"
source = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.pypi_package_name }}"

[tool.bumpversion]
current_version = "{{ cookiecutter.project_version }}"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version to {new_version}"
allow_dirty = true
commit = false
message = "Bump version to {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
files = "{{ cookiecutter.python_package_name }}/**/*.py,tests/**/*.py"
implicit_reexport = false
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.poe]
verbosity = -1

[tool.poe.tasks]
tasks.cmd = "poe -v"
tasks.help = "List available tasks"
{% if cookiecutter.include_executable == "y" -%}
cli.script = "{{ cookiecutter.python_package_name }}.cli:run"
cli.help = "Run command line interface"
{% endif -%}
doc.shell = """
    set -ex
    rm -rf build/html build/man
    sphinx-build -aqEW -b html doc/sphinx build/html
    sphinx-build -qW -b man doc/sphinx build/man
"""
doc.help = "Generate documentation"
formatcheck.cmd = "ruff format --check"
formatcheck.help = "Check for formatting style violations not covered by the linter"
{% if cookiecutter.include_executable == "y" -%}
hello.script = "{{ cookiecutter.python_package_name }}.cli:hello"
hello.help = "Run hello"
{% endif -%}
html.script = "webbrowser:open('build/html/index.html')"
html.help = "Browse HTML documentation"
linter.cmd = "pylint --enable-all-extensions {{ cookiecutter.python_package_name }}"
linter.help = "Check for style violations"
man.cmd = "man build/man/
{%- if cookiecutter.include_executable == "y" -%}
    {{ cookiecutter.executable_name }}.1
{%- else -%}
    {{ cookiecutter.pypi_package_name }}.3
{%- endif -%}
"
man.help = "Open manual page"
tests.cmd = "pytest"
tests.help = "Run test suite"
typecheck.cmd = "mypy"
typecheck.help = "Run static type checker"

[tool.pyright]
reportUnsupportedDunderAll = "none"

[tool.pytest.ini_options]
testpaths = "tests"
xfail_strict = true

[tool.ruff]
line-length = 72

[tool.ruff.format]
quote-style = "single"

[tool.uv]
default-groups = ["dev", "doc", "test"]
fork-strategy = "fewest"
